--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-k
+ @font-face {
+     font-family: Roboto;
+     src: url("assets/fonts/Roboto/Roboto-Regular.ttf");
+ }
+  body {
+      font-family: Roboto;
+  }
