--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
      font-family: Roboto;
      src: url("assets/fonts/Roboto-Regular.ttf");
  }
+
+* {
+    box-sizing: border-box;
+}
+
   body {
       font-family: Roboto;
   }
