--- a/style.css
+++ b/style.css
@@ -16,3 +16,8 @@
       flex-direction: column;
       justify-content: space-between;
   }
+
+  .container {
+      max-width: 1440px;
+      margin: auto;
+  }
