--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
- @font-face {
+html {
+    scroll-behavior: smooth;
+}
+
+@font-face {
      font-family: Roboto;
      src: url("assets/fonts/Roboto-Regular.ttf");
  }
