--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ html {
     scroll-behavior: smooth;
 }
 
+@media (max-width: 768px) {
+    .section {
+        width: 100%;
+    }
+}
+
 @font-face {
      font-family: Roboto;
      src: url("assets/fonts/Roboto-Regular.ttf");
@@ -37,4 +43,13 @@ html {
       padding: 0 20px;
       line-height: 50px;
       text-decoration: none;
+  }
+
+  .main-container {
+      display: flex;
+      flex-wrap: wrap;
+  }
+  
+  .section {
+      width: 50%;
   }
