--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ html {
   .section {
       width: 50%;
   }
+
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
