--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ html {
       padding: 0 20px;
       line-height: 50px;
       text-decoration: none;
+      color: #ffffff;
   }
 
   .contact-link {
@@ -71,4 +72,9 @@ html {
     padding: 20px;
     background-color: #000000;
     color: #ffffff;
+  }
+
+  .footer-link {
+      color:#ffffff;
+      text-decoration: none;
   }
