--- a/style.css
+++ b/style.css
@@ -24,7 +24,23 @@ html {
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
+      font-size: 18px;
+      line-height: 1.5;
+  }
+
+  .title {
+      font-size: 30px;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+      text-align: center;
+  }
+  .subtitle {
+      font-size: 20px;
+      font-weight: 300;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+      text-align: center;
   }
 
   .container {
