feat: add project

--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ html {
       color: #000000;
   }
 
+  .project-link {
+      color:#000000
+  }
+
   .main-container {
       display: flex;
       flex-wrap: wrap;
