--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html {
   }
 
   .nav-link {
-      padding: 0 20px;
+      padding: 33px 20px;
       line-height: 50px;
       text-decoration: none;
       color: #ffffff;
