--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ html {
       font-family: Roboto, sans-serif;
       font-size: 18px;
       line-height: 1.5;
+      background-image: url(assets/img/4907157.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
   }
 
   .title {
