refactor: change background image, delete previous images

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
       font-family: Roboto, sans-serif;
       font-size: 18px;
       line-height: 1.5;
-      background-image: url(assets/img/SL_042620_30310_19.jpg);
+      background-image: url(assets/img/4850037.jpg);
       background-size: cover;
       background-repeat: no-repeat;
   }
@@ -99,7 +99,7 @@ html {
   }
 
   .snippet {
-      background-color: #e7e7e7;
+      background-color: #f0f0f0;
   }
   
   .footer {
