--- a/style.css
+++ b/style.css
@@ -2,14 +2,9 @@ html {
     scroll-behavior: smooth;
 }
 
-@media (max-width: 768px) {
-    .section {
-        width: 100%;
-    }
-}
 
 @font-face {
-     font-family: Roboto;
+     font-family: 'Roboto';
      src: url("assets/fonts/Roboto-Regular.ttf");
  }
 
@@ -24,7 +19,7 @@ html {
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      font-family: Roboto, sans-serif;
+      font-family: 'Roboto', sans-serif;
       font-size: 18px;
       line-height: 1.5;
       background-image: url(assets/img/4850037.jpg);
@@ -66,7 +61,7 @@ html {
   }
 
   .nav-link:hover {
-      background-color: #d2691e;
+      color: #d2691e;
       transition: .3s;
   }
 
@@ -91,7 +86,12 @@ html {
   
   .section {
       width: 50%;
-      }
+      padding: 0 5px;
+  }
+
+  .summary {
+    max-width: 580px;
+  }
 
   .footer-container {
     display: flex;
@@ -104,12 +104,15 @@ html {
   }
 
   .snippet {
+     padding-left: 10px;
       background-color: #f0f0f0;
   }
 
   .code-example {
       width: 100%;
-      text-align: left;
+      
+      font-size: 15px;
+      text-align: center;
 }
   
   .footer {
@@ -126,3 +129,23 @@ html {
   .footer-created {
       padding: 10px;
   }
+
+  @media (max-width: 1160px) {
+
+    .section {
+        width: 100%;
+    }
+
+    .section:first-child {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 965px) {
+    .nav-link {
+        padding: 20px 10px;
+
+        font-size: 15px;
+    }
+}
