--- a/style.css
+++ b/style.css
@@ -12,6 +12,19 @@ html {
     box-sizing: border-box;
 }
 
+.pop-up-cover {
+    display: none;
+    position: fixed;
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20, 20, 20, 0.5);
+  }
+  
+  .pop-up-cover-active {
+    display: block;
+  }
+
   body {
       display: flex;
       flex-direction: column;
@@ -46,6 +59,11 @@ html {
       margin: auto;
   }
  
+  .nav {
+    display: flex;
+    justify-content: flex-end;
+  }
+
   .nav-list {
       display: flex;
       justify-content: flex-end;
@@ -74,6 +92,63 @@ html {
     transition: .3s;
   }
 
+  .burger-container {
+    display: none;
+  }
+  
+  .burger-menu {
+    position: fixed;
+    z-index: 5;
+    right: 0;
+    left: 390px;
+    top: 10px;
+    bottom: 0;
+    width: 280px;
+    height: 420px;
+    background-color: #000000;
+    border-radius: 10%;
+    transform: translate(5000px, 0);
+    transition: .5s;
+  }
+  
+  .burger-menu-active {
+    transform: translate(0, 0);
+  }
+  
+  .dash-container {
+    position: absolute;
+    left: 15px;
+    top: 30px;
+    width: 30px;
+    height: 30px;
+  }
+  
+  .dash {
+    width: 25px;
+    height: 2px;
+    background-color: #D9D9D9;
+  }
+  
+  .dash-part1 {
+    transform: rotate(45deg) translate(-1px, -2px);
+  }
+  
+  .dash-part2 {
+    transform: rotate(-45deg) translate(3.5px, -2px);
+  }
+  
+  .burger-nav-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 180px;
+    list-style: none;
+  }
+  
+  .burger-link {
+    padding: 10px 90px 10px 5px;
+  }
+
   .phone-link {
     text-decoration-line: underline;
     cursor: pointer;
@@ -99,8 +174,9 @@ html {
   }
 
   .header {
-      background-color: #000000;
-      margin-bottom: 20px;
+    height: 74px;
+    background-color: #000000;
+    margin-bottom: 20px;
   }
 
   .snippet {
@@ -147,5 +223,25 @@ html {
         padding: 20px 10px;
 
         font-size: 15px;
+    }
+}
+
+@media (max-width: 704px) {
+    .nav-list {
+        display: none;
+    }
+}
+
+@media (max-width: 704px) {
+    .burger-container {
+      display: block;
+      margin-top: 36px;
+      cursor: pointer;
+    }
+  }
+
+@media (max-width: 675px) {
+    .burger-menu {
+        left: 310px;
     }
 }
