--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ html {
   .nav {
     display: flex;
     justify-content: flex-end;
+    padding-right: 10px;
   }
 
   .nav-list {
@@ -244,4 +245,70 @@ html {
     .burger-menu {
         left: 310px;
     }
+}
+
+@media (max-width: 590px) {
+  .burger-menu {
+    left: 270px;
+}
+  .code-example {  
+    font-size: 12px;
+}
+}
+
+@media (max-width: 550px) {
+  .burger-menu {
+    width: 230px;
+    border-radius: 5%;
+}
+}
+
+@media (max-width: 500px) {
+  .burger-menu {
+    left: 240px;
+}
+}
+
+@media (max-width: 470px) {
+  .burger-menu {
+    left: 200px;
+}
+}
+
+@media (max-width: 468px) {
+  .title {
+    font-size: 20px;
+  }
+  .subtitle {
+      font-size: 16px;
+  }
+
+  .section-title {
+    font-size: 16px;
+  }
+
+  .text {
+    font-size: 15px;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 463px) {
+  .snippet {
+    padding: 0;
+  }
+  .code-example {  
+    font-size: 10px;
+}
+}
+
+@media (max-width: 430px) {
+  .burger-menu {
+    left: 150px;
+}
 }
